; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_state.c_PicoStateFP.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_state.c_PicoStateFP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@areaRead = common dso_local global i32* null, align 8
@areaWrite = common dso_local global i32* null, align 8
@areaEof = common dso_local global i32* null, align 8
@areaSeek = common dso_local global i32* null, align 8
@areaClose = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PicoStateFP(i8* %0, i32 %1, i32* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32*, i32** %9, align 8
  store i32* %13, i32** @areaRead, align 8
  %14 = load i32*, i32** %10, align 8
  store i32* %14, i32** @areaWrite, align 8
  %15 = load i32*, i32** %11, align 8
  store i32* %15, i32** @areaEof, align 8
  %16 = load i32*, i32** %12, align 8
  store i32* %16, i32** @areaSeek, align 8
  store i32* null, i32** @areaClose, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @pico_state_internal(i8* %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @pico_state_internal(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
